# Learning

./: README.md  connection_log.txt
Note/C/: UTHash详解.md  同一文件不同平台编译输出不同.md
Note/Daily/: Ubuntu 22.04日常办公环境记录.md  每日记录.md
Note/Docker/: Docker中运行新建工程.md  Docker入门.md  Docker微服务.md  SSH登录远端Linux服务器.md
Note/Git/: Git——只克隆指定分支的代码.md  Git——在Ubuntu 22.04系统下安装及配置.md  Git——本地分支落后于远端如何解.md
Note/IAR/: IAR Fatal error解决.md  IAR双分区源码合并和烧录问题描述.md  IAR工程中一些文件的含义和作用.md  IAR工程中各个文件的类型及含义.md  IAR构建烧录全流程.md  IAR调试配置文件缺失定位记录.md
Note/Linux/: Ubuntu22.04安装ROS2.md  Ubuntu22.04激活Typora.md
Note/MCU/: ADC变量映射排布及宏定义替换.md  B样MCU电源状态监控信息汇总.md  IAR自动化编译工具链.md  MCU接收处理SOC的UDP指令.md  OTA安全升级策略.md  Orin命令行操作MCU下电.md  UART指令预识别之重排策略验证.md  Xmodem传输策略优化.md  sscom串口调试助手使用说明.md  一体机B样电源监控方案.md  一体机电源状态监控初版实现方案.md  代码走读-CM0核OTA升级逻辑及核心函数梳理.md  代码走读-OTA升级文件传输之Xmodem协议接收函数梳理.md  代码走读-UART传输收发策略及环形缓冲区理解.md  代码走读-远程上下电控制核心函数梳理.md  代码走读-远程上下电控制逻辑及核心函数梳理.md  异步IO+termios编程实现串口接收.md  异步IO+termios编程实现串口接收解释.md  查漏补缺-芯片笔记.md  热敏电阻ADC计算公式与查表.md  通感算一体机MCU业务功能测试.md
Note/Network/: 新到设备连接交换机后主机无法通过WIFI访问.md  计算机网络体系结构.md
Note/ROS/: ROS2节点编译之C++入门.md
Note/ROS2/: ROS2实操入门.md  ROS2实操进阶.md  ROS2常用工具.md  ROS2节点编译之C++基础.md  ROS2节点通信之话题与服务.md  ROS2通信之参数与动作.md  ROS节点编译之Python基础.md
Note/SOC/: SOC命令行配置查询记录.md
ROS2/Test/Cpp/d2lros2/: CMakeLists.txt  a.out
Test/: bus_voltage  bus_voltage.c  enum_to_uint8_t  enum_to_uint8_t.c  float_to_hex  float_to_hex.c  parse_data  parse_data.c  rearrange  rearrange_data  rearrange_data.c  test  test.c  time_duration  time_duration.c
工作记录/: Ubuntu22.04安装ROS2.md
(+113 files in other folders)
